<resources>
    <string name="app_name">BiblioApp</string>
    <string name="content_description">Portada del libro</string>
    <string name="estanteria_error_read">Error listando libros: %s</string>
    <string name="libro_error_read">Aviso: %s</string>
    <string name="is_speaking_error">No se puede cambiar de capítulo. La app esta leyendo en voz alta</string>
    <string name="is_speaking_end">Se ha terminado de leer en voz alta el capítulo actual</string>
    <string name="menu_estanteria">Estantería</string>
    <string name="menu_capitulos">Índice</string>
    <string name="menu_setting">Ajustes</string>
    <string name="menu_libro">Libro</string>
    <string name="menu_speak">Voz</string>
    <string name="menu_stop_speak">Mudo</string>
    <string name="menu_prev">Capítulo Anterior</string>
    <string name="menu_next">Capítulo Siguiente</string>
    <string name="header_description">Imagen de la aplicación</string>
    <string name="about_biblio">BiblioApp</string>
    <string name="menu_about">Acerca de &#8230;</string>
    <string name="velocity_speech">Pulsa aquí para seleccionar la velocidad de lectura en voz alta del libro</string>
    <string name="velocity_key">velocity_key</string>
    <string name="velocity_title">Velocidad de Lectura</string>
    <string name="highlight_key">highlight_key</string>
    <string name="highlight_title">Resaltar texto leyendo</string>
    <string name="highlight_summary">Selecciona esta opción para resaltar el texto que se esta leyendo en voz alta</string>
    <string name="menu_add_bookmark">Añadir Marca</string>
    <string name="menu_goto_bookmark">Ir a la Marca</string>
    <string name="menu_clear_bookmark">Borrar Marcador</string>
    <string name="navview_header_navigation">Navegación</string>
    <string name="navview_header_bookmark">Marcadores</string>
    <string name="success_bookmark">El marcador se añadió exitósamente</string>
    <string name="success_delete_bookmark">El marcador se borró exitosamente</string>
    <string name="nightmode_key">nightmode_key</string>
    <string name="nightmode_title">Luz Nocturna</string>
    <string name="nightmode_summary">Pulsa aquí para seleccionar el modo de lectura diurno o nocturno. El modo nocturno proporciona tonos oscuros que no causan estrés visual.</string>
    <string name="textsize_key">textsize_key</string>
    <string name="textsize_title">Tamaño Texto</string>
    <string name="textsize_summary">Pulsa aquí para seleccionar el tamaño del texto del libro. Pequeño, normal, o grande.</string>
    <string name="label_diccionario">Diccionario</string>
    <string name="diccionario_title">Diccionario</string>
    <string name="diccionario_summary">Pulsa aquí para seleccionar tu diccionario preferido</string>
    <string name="diccionario_key">diccionario_key</string>
    <string name="error_diccionario">Error: Para consultar en el diccionario debe seleccionar una sola palabra, y usted ha seleccionado %1$d palabras.\n\nSu selección ha sido: %2$s</string>
    <string name="texto_diccionario">Palabra seleccionada: %s</string>
    <string name="oxford">Oxford</string>
    <string name="thefreediccionario">TheFreeDictionary</string>
    <string name="wikcionario">Wikcionario</string>
    <string name="wordreference">WordReference</string>
    <string name="select_dictionary">Diccionario Seleccionado:</string>
    <string name="search_diccionario">Buscar</string>
    <string name="about_alimento">Alimento para tu mente</string>
    <string name="about_me">Developed by Arturo in 2017</string>
    <string name="about_copy">&#169;afgl</string>
    <string name="logo_description">Logo BiblioApp</string>
    <string name="clipboard_error">No se pudo acceder al ClipBoard</string>
</resources>