<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="org.afgl.biblioapp.diccionario.DiccionarioActivity">

    <android.support.constraint.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/mytextview"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_textview"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent" />

        <TextView
            android:id="@+id/select_diccionario"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:padding="@dimen/padding_textview"
            android:text="@string/select_dictionary"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/mytextview" />

        <RadioGroup
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/myRadioGroup"
            android:paddingStart="@dimen/padding_group"
            android:paddingLeft="@dimen/padding_group"
            android:paddingRight="@dimen/padding_group"
            android:paddingEnd="@dimen/padding_group"
            app:layout_constraintTop_toBottomOf="@+id/select_diccionario"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintLeft_toLeftOf="parent">

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/oxford"
                android:text="@string/oxford"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/thefreediccionario"
                android:text="@string/thefreediccionario" />

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/wikcionario"
                android:text="@string/wikcionario"/>

            <RadioButton
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:id="@+id/wordreference"
                android:text="@string/wordreference"/>

        </RadioGroup>

        <Button
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:id="@+id/myButton"
            android:text="@string/search_diccionario"
            android:layout_marginTop="@dimen/padding_textview"
            app:layout_constraintTop_toBottomOf="@+id/myRadioGroup"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"/>

    </android.support.constraint.ConstraintLayout>

</ScrollView>